add basic UI